Fix spacing issues

--- a/style.38.css
+++ b/style.38.css
@@ -87,7 +87,8 @@ h6 {
 }
 
 .panel-title a {
-  padding: 14px 12px 5px;
+  margin-bottom: 12px;
+  padding: 14px 12px 0;
   display: block;
   line-height: 20px;
   transition: background 0.3s;
@@ -182,6 +183,7 @@ ol li:last-child {
   padding: 0 20px;
   font-size: 10px;
   text-align: left;
+  display: none;
 }
 
 .tiebreakers ol {
@@ -200,7 +202,7 @@ ol li:last-child {
 
 .bracket {
   margin: 100px auto 0;
-  padding-bottom: 20px;
+  padding-bottom: 50px;
   width: 90%;
   display: flex;
   flex-direction: row;
@@ -325,14 +327,11 @@ li.game-bottom {
     display: block;
   }
 
-  .day-2, .day-3-4 {
+  .day-2 {
     margin-top: 0;
     margin-bottom: 0;
     border-top: 5px solid #f4f4f4;
-  }
-
-  .panel-title {
-    margin-bottom: 0;
+    border-bottom: 5px solid #f4f4f4;
   }
 
   .tiebreakers {
